--- a/app/scss/partials/_foundation.scss
+++ b/app/scss/partials/_foundation.scss
@@ -9,7 +9,7 @@
 @import '../../../node_modules/foundation-sites/scss/util/util';
 
 // Global variables and styles
-// @import 'global';
+@import '../../../node_modules/foundation-sites/scss/global';
 
 // Components
 @import '../../../node_modules/foundation-sites/scss/grid/grid';
